tests/snapshots/snapshots__c3_headline_has_fraction_and_slope_but_not_projection.snap
---
source: tests/snapshots.rs
assertion_line: 180
expression: s
---
> composition step 2 680 tokens
component system 11 1%
component tool-schemas 0 0%
component history 669 98%
waste repeated-block-across-turns wasted_tokens=669 2 block(s) re-sent verbatim across >=2 turns
waste unpruned-history wasted_tokens=1115 history grew 1->3 msgs over 3 turns, never pruned (1115 tok carried after turn 0)
waste preamble-repay wasted_tokens=22 system prompt re-paid: 2 extra payment(s) across 1 variant(s)
window claude-3-5-sonnet-20241022 680/200000 tok 0% slope 223 tok/turn over 3 turn(s) (offline static window table, approximate (never calls an API))
summary: 680 tokens, 3 finding(s) (offline o200k approximation, ±10% (never calls an API))
