tests/snapshots/snapshots__c3_headroom_tty_render.snap
---
source: tests/snapshots.rs
assertion_line: 231
expression: s
---
[1m[38;2;217;119;87m⏺[0m Composition [2mstep 2 · 680 tokens[0m
  [2m⎿[0m [2msystem · 1% · 11 tok[0m
  [2m⎿[0m [2mtool-schemas · 0% · 0 tok[0m
  [2m⎿[0m [2mhistory · 98% · 669 tok[0m

[1m[38;2;217;119;87mWaste[0m
  [2m⎿[0m [2mrepeated-block-across-turns · ~669 tok · 2 block(s) re-sent verbatim across >=2 turns[0m
  [2m⎿[0m [2munpruned-history · ~1115 tok · history grew 1->3 msgs over 3 turns, never pruned (1115 tok carried after turn 0)[0m
  [2m⎿[0m [2mpreamble-repay · ~22 tok · system prompt re-paid: 2 extra payment(s) across 1 variant(s)[0m

[1m[38;2;217;119;87mWindow[0m
  [2m⎿[0m [2mclaude-3-5-sonnet-20241022 · 680/200000 tok · 0% · slope 223 tok/turn over 3 turn(s)[0m
  [2m·[0m [2mat the observed mean rate (~223 tok/turn over 3 turn(s)), ~893 more turn(s) before the 200000-tok window is reached (neutral arithmetic projection, not a prediction)[0m
  [2m· offline static window table, approximate (never calls an API)[0m

[1m[38;2;217;119;87mSummary[0m
  [2m680 tokens · 3 finding(s) · offline o200k approximation, ±10% (never calls an API)[0m
