tests/snapshots/snapshots__f1_composition_plain_grep_clean.snap
---
source: tests/snapshots.rs
expression: s
---
> composition step 1 48 tokens
component system 11 22%
component tool-schemas 12 25%
component history 25 52%
waste unused-loaded-tools wasted_tokens=6 1 of 2 loaded tools never called this run
waste duplicate-block wasted_tokens=9 step 1: 1 verbatim-duplicated block(s) in one prompt
waste repeated-block-across-turns wasted_tokens=9 1 block(s) re-sent verbatim across >=2 turns
waste unpruned-history wasted_tokens=25 history grew 1->3 msgs over 2 turns, never pruned (25 tok carried after turn 0)
waste preamble-repay wasted_tokens=11 system prompt re-paid: 1 extra payment(s) across 1 variant(s)
summary: 48 tokens, 5 finding(s) (offline o200k approximation, ±10% (never calls an API))
