tests/snapshots/snapshots__f2_oneshot_plain_is_byte_exact.snap
---
source: tests/snapshots.rs
expression: "String::from_utf8(buf).unwrap()"
---
{"model":"claude-3","system":"be terse","messages":[{"role":"user","content":"ping"}]}
